--- a/nginx.conf
+++ b/nginx.conf
@@ -4,9 +4,23 @@ events {
 
 http {
     # Configuración para el frontend en el puerto 80
-   server {
+    server {
         listen 80;
         server_name enidservice.com www.enidservice.com;
+
+        # Redirigir todo el tráfico HTTP a HTTPS
+        return 301 https://$host$request_uri;
+    }
+
+    # Configuración para el frontend en HTTPS
+    server {
+        listen 443 ssl;
+        server_name enidservice.com www.enidservice.com;
+
+        ssl_certificate /etc/letsencrypt/live/enidservice.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/enidservice.com/privkey.pem;
+        include /etc/letsencrypt/options-ssl-nginx.conf;
+        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
         location / {
             proxy_pass http://frontend:5173;
@@ -17,7 +31,6 @@ http {
             proxy_set_header X-Forwarded-Host $host;
         }
     }
-
 
     # Configuración para los microservicios en el puerto 8080
     server {
