--- a/nginx.conf
+++ b/nginx.conf
@@ -1,27 +1,14 @@
+worker_processes 1;
+
 events {
     worker_connections 1024;
 }
 
 http {
-    # Configuración para el frontend en el puerto 80
     server {
         listen 80;
-        server_name enidservice.com www.enidservice.com;
 
-        # Redirigir todo el tráfico HTTP a HTTPS
-        return 301 https://$host$request_uri;
-    }
-
-    # Configuración para el frontend en HTTPS
-    server {
-        listen 443 ssl;
-        server_name enidservice.com www.enidservice.com;
-
-        ssl_certificate /etc/letsencrypt/live/enidservice.com/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/enidservice.com/privkey.pem;
-        include /etc/letsencrypt/options-ssl-nginx.conf;
-        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-
+        # Configuración para el frontend
         location / {
             proxy_pass http://frontend:5173;
             proxy_set_header Host $host;
@@ -30,12 +17,8 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header X-Forwarded-Host $host;
         }
-    }
 
-    # Configuración para los microservicios en el puerto 8080
-    server {
-        listen 8080;
-
+        # Configuración para los microservicios
         location /api/lead/ {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -52,18 +35,18 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header X-Forwarded-Host $host;
-            proxy_pass http://references_service:8080;
+            proxy_pass http://references_service:8080;            
             rewrite ^/api/references/(.*) /$1 break;
         }
 
-        location / {
+        location /api/enid/ {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header X-Forwarded-Host $host;
             proxy_pass http://enid_service:8080;
-            rewrite ^/(.*) /$1 break;
+            rewrite ^/api/enid/(.*) /$1 break;
         }
 
         location /api/faqs/ {
